.provarCaches/00D5f000005vwGkEAI/objects/rstk__sobook__c.object
<CustomObject>
    <description>sobook__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__sobook_custno__r.rstk__socust_custno__c + &apos; &apos; +  rstk__sobook_prod__r.rstk__soprod_prod__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_application__c</fullName>
        <inlineHelpText>SO Booking Application</inlineHelpText>
        <label>Application</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_bookamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the extended Booking amount for this Sales Order Line</inlineHelpText>
        <label>Booking Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_bookper__c</fullName>
        <inlineHelpText>This is the Booking Period for this Sales Order Line</inlineHelpText>
        <label>Booking Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_bookyear__c</fullName>
        <inlineHelpText>This is the Booking Year for this Sales Order Line</inlineHelpText>
        <label>Booking Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_custno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Customer associated with this Sales Order.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Sales Order Bookings</relationshipLabel>
        <relationshipName>sobooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This is transaction date for this Sales Order Booking</inlineHelpText>
        <label>Txn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_discpct__c</fullName>
        <inlineHelpText>This is the discount percentage for this Product Booking</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_origbookper__c</fullName>
        <inlineHelpText>This is the Original Booking Period for this Sales Order Line</inlineHelpText>
        <label>Original Booking Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_origbookyear__c</fullName>
        <inlineHelpText>This is the Original Booking Year for this Sales Order Line</inlineHelpText>
        <label>Original Booking Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_price__c</fullName>
        <inlineHelpText>This is the Unit Price of the Product being Booked</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_prod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Product Number for this Sales Order Booking</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Sales Order Bookings</relationshipLabel>
        <relationshipName>sobooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Project associated with this Sale Order Line</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order Bookings</relationshipLabel>
        <relationshipName>Sales_Order_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_qtyorder__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity being Booked for this Sales Order Line</inlineHelpText>
        <label>Order Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_seq__c</fullName>
        <inlineHelpText>This is the Sequence number of this Sales Order Booking</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_soline__c</fullName>
        <inlineHelpText>This is the Sales Order line being Booked.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipName>sobooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_txntype__c</fullName>
        <inlineHelpText>SO Booking transaction Type</inlineHelpText>
        <label>Txn Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sobook_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the User associated with this Sales Order Booking</inlineHelpText>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Bookings</relationshipLabel>
        <relationshipName>sobooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Booking</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Sales_Order_Bookings</fullName>
        <columns>NAME</columns>
        <columns>rstk__sobook_custno__c</columns>
        <columns>rstk__sobook_bookyear__c</columns>
        <columns>rstk__sobook_bookper__c</columns>
        <columns>rstk__sobook_prod__c</columns>
        <columns>rstk__sobook_qtyorder__c</columns>
        <columns>rstk__sobook_price__c</columns>
        <columns>rstk__sobook_bookamt__c</columns>
        <columns>rstk__sobook_soline__c</columns>
        <columns>rstk__sobook_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Order Bookings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>